--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -36,7 +36,7 @@
     }
   },
   "peerDependencies": {
-    "@hypertype/core": "^4.0.4-cmmn"
+    "@hypertype/core": "*"
   },
   "dependencies": {
     "@cmmn/core": "^1.4.2",
