--- a/packages/app/package.json
+++ b/packages/app/package.json
@@ -47,10 +47,12 @@
 		"router5-plugin-browser": "8.0.1",
 		"typescript": "4.x.x"
 	},
-	"hypertype": {
-		"lib": {
-			"bundler": "node",
-			"entryPoint": "dist/esm/index.js"
+	"cmmn": {
+		"index": {
+			"input": "./dist/esm/index.js",
+      "external": [
+        "@hypertype"
+      ]
 		}
 	},
 	"gitHead": "9151a37757c75a5b80836c57de97db2bf7158fa0"
