--- a/packages/infr/package.json
+++ b/packages/infr/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hypertype/infr",
-  "version": "4.0.8-cmmn",
+  "version": "4.0.9-cmmn",
   "description": "",
   "main": "dist/index.js",
   "module": "dist/index.js",
@@ -41,13 +41,15 @@
     "@hypertype/core": "*"
   },
   "devDependencies": {
-    "@hypertype/tools": "^4.0.8-cmmn",
+    "@hypertype/tools": "^4.0.9-cmmn",
     "@types/node": "16.x.x"
   },
   "cmmn": {
     "index": {
       "input": "./dist/esm/index.js",
-      "external": ["@hypertype"]
+      "external": [
+        "@hypertype"
+      ]
     }
   },
   "gitHead": "9151a37757c75a5b80836c57de97db2bf7158fa0"
