--- a/packages/core/package.json
+++ b/packages/core/package.json
@@ -45,7 +45,7 @@
 		"luxon": "2.x.x"
 	},
 	"dependencies": {
-		"@cmmn/core": "1.4.16"
+		"@cmmn/core": "1.4.x"
 	},
 	"devDependencies": {
 		"@hypertype/tools": "^4.0.9-cmmn",
