switch to @cmmn/cell

--- a/packages/domain/package.json
+++ b/packages/domain/package.json
@@ -39,13 +39,13 @@
     "@hypertype/core": "*"
   },
   "dependencies": {
-    "@cmmn/core": "1.4.x",
-    "@cmmn/domain": "1.4.x",
-    "@hypertype/infr": "^4.0.10-cmmn",
-    "cellx": "1.x.x"
+    "@cmmn/core": "1.5.x",
+    "@cmmn/cell": "1.5.x",
+    "@cmmn/domain": "1.5.x",
+    "@hypertype/infr": "^4.0.10-cmmn"
   },
   "devDependencies": {
-    "@cmmn/tools": "1.4.x",
+    "@cmmn/tools": "1.5.x",
     "@hypertype/tools": "^4.0.10-cmmn",
     "@types/node": "16.x.x",
     "typescript": "4.x.x"
@@ -55,8 +55,7 @@
       "input": "./dist/esm/index.js",
       "external": [
         "@hypertype",
-        "@cmmn",
-        "cellx"
+        "@cmmn"
       ],
       "module": "es,cjs"
     }
