--- a/packages/infr-browser/package.json
+++ b/packages/infr-browser/package.json
@@ -2,9 +2,8 @@
   "name": "@hypertype/infr-browser",
   "version": "4.0.10-cmmn",
   "description": "",
-  "main": "dist/esm/index.js",
-  "module": "dist/esm/index.js",
-  "bundle": "dist/bundle/index.js",
+  "main": "dist/lib.js",
+  "module": "dist/lib.js",
   "typings": "dist/typings/index.d.ts",
   "scripts": {
     "deploy": "npm version patch && npm publish",
@@ -48,6 +47,14 @@
     "lib": {
       "bundler": "node",
       "entryPoint": "dist/esm/index.js"
+    }
+  },
+  "cmmn": {
+    "lib": {
+      "input": "dist/esm/index.js",
+      "external": [
+        "@hypertype"
+      ]
     }
   },
   "gitHead": "9151a37757c75a5b80836c57de97db2bf7158fa0"
